scaleway/manifests/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: n8n
  namespace: n8n
spec:
  ingressClassName: traefik
  rules:
  - host: n8n.getsober.one
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - n8n.getsober.one
    secretName: n8n-tls
